--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,4 @@ spring.profile=dev
 spring.datasource.url=jdbc:h2:mem:acctmgmt_dev_db
 spring.datasource.username=sa
 spring.datasource.password=
+logging.level.root=DEBUG
