--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,3 +4,4 @@ spring.profile=prod
 spring.datasource.url=jdbc:h2:mem:acctmgmt_prod_db
 spring.datasource.username=sa
 spring.datasource.password=
+logging.level.root=INFO
